tests/baselines/reference/parserAccessibilityAfterStatic2(strict=true).errors.txt
parserAccessibilityAfterStatic2.ts(3,8): error TS7008: Member 'public' implicitly has an 'any' type.


==== parserAccessibilityAfterStatic2.ts (1 errors) ====
    class Outer
    {
    static public;
           ~~~~~~
!!! error TS7008: Member 'public' implicitly has an 'any' type.
    }
    